--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -32,7 +32,7 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11748709.md#1" target="_blank">天地清明引(159) 东流水－十年生死5</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11748709.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/09/0213-3-150x120.jpg" align ="left"></a>王庭。铎克齐负立多时，心内惴惴不安，抬眼之间，望见皇甫只手扶额，闭目不语。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/12/24/n1952760.md#1" target="_blank">艺术的时空之旅（十二）传统油画技法探究（五）</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/12/24/n1952760.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Durer_selfporitrait-150x120.jpg" align ="left"></a>这是德国画家阿尔布莱希特·丢勒（Albrecht Durer）于1500年所作的自画像。严谨细腻的多层罩染技法将几乎所有的细节都刻画入微，连头发都丝缕可数。造成这种真实感的一个重要因素就在于作者对光、影、色以及转折处细腻的过渡处理。甚至于每一小缕头发、胡须都仔细地由高光部分渐渐过渡到平光的亮部，再细腻地过渡到测光的灰调.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200105-Joway-FLUNG-01-150x120.jpg" align ="left"></a>2020年新年伊始，修炼真善忍的屏东法轮功学员，举办两日学法交流，针对如何学好法，如何符合真善忍法理的要求，互相勉励精进提升，期望能找回修炼如初的心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 10:37 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777458.md#1" target="_blank">五律：雪</a><br></h3> 冰心天使者，妩媚玉夫人。 系与寒梅客，情由嫩柳春。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 12:20 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/26/n11747591.md#1" target="_blank">讣告误传拆散“凤凰” 她题诗铭志终续姻缘</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/26/n11747591.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/PK2A003-150x120.jpg" align ="left"></a>明朝时期，有一个人和卢瀚同名同姓，但那人不幸去世了，卜告消息误传到扬州。卢妻以为夫君去世，不禁悲痛欲绝。后来，她在金山寺璧题写一首诗，使得两人再续夫妻之缘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777442.md#1" target="_blank">诗歌：韵满弓刀</a><br></h3> 风利如刀月满弓， 云长若带缚红龙。 除魔笔上冲天鹤， 古韵行间啸铁骢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 11:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11774989.md#1" target="_blank">七绝：响雪</a><br></h3> 雪落三更响玉声， 雄鸡骤起九千鸣。 风摇树挂悬银剑， 横扫人间路不平！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11774926.md#1" target="_blank">七律：寄白居易</a><br></h3> 作诗如话多深味，愁唱醉吟悲抚桐。 杨柳千姿舞腰细，樱桃一点似唇红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:16 PM			</td></tr>
